--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="">Ingresá</a></li>
         <li><a href="">Mis compras</a></li>
     </ul>
-    <img src="images/img-home-banner.jpg" width="320px" alt="banner-mercado-liebre">
+    <img src="images/img-home-banner.jpg" width="100%" alt="banner-mercado-liebre">
     <h3>Basado en tu última visita</h3>
     <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera-mercado-liebre">
     <p>$6.770</p>
