--- a/index.html
+++ b/index.html
@@ -4,44 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MercadoLiebre</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 <body>
-    <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
-    <p>Lugar para poner barra de busqueda</p>
-    <p>Comprá en cuotas y sin tarjeta de crédito</p>
-    <ul>
-        <li><a href="">Ofertas</a></li>
-        <li><a href="">Tiendas Oficiales</a></li>
-        <li><a href="">Vender</a></li>
-        <li><a href="">Ayuda</a></li>
-    </ul>
-    <ul>
-        <li><a href="">Crea tu cuenta</a></li>
-        <li><a href="">Ingresá</a></li>
-        <li><a href="">Mis compras</a></li>
-    </ul>
+    <div class="header">
+        <img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
+        <p>Lugar para poner barra de busqueda</p>
+        <p><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
+        <ul>
+            <li><a href="">Ofertas</a></li>
+            <li><a href="">Tiendas Oficiales</a></li>
+            <li><a href="">Vender</a></li>
+            <li><a href="">Ayuda</a></li>
+        </ul>
+        <ul>
+            <li><a href="">Crea tu cuenta </a><i class="fas fa-address-card"></i></li>
+            <li><a href="">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
+            <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
+        </ul>
+    </div>
+    
     <img src="images/img-home-banner.jpg" width="100%" alt="banner-mercado-liebre">
-    <h3>Basado en tu última visita</h3>
+    <h3 class="recomendation">Basado en tu última visita</h3>
     <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera-mercado-liebre">
+    <i class="fas fa-truck"></i>
     <p>$6.770</p>
-    <p>40% off</p>
+    <p class="discount">40% off</p>
     <b>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</b>
     <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="macbook-mercado-liebre">
+    <i class="fas fa-truck"></i>
     <p>$230.000</p>
-    <p>20% off</p>
+    <p class="discount">20% off</p>
     <b>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</b>
     <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="tv-mercado-liebre">
+    <i class="fas fa-truck"></i>
     <p>$70.500</p>
-    <p>10% off</p>
+    <p class="discount">10% off</p>
     <b>Televisor Samsung Smart TV Lorem ipsum, dolor sit amet.</b>
     <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="samsumg-cel-mercado-liebre">
+    <i class="fas fa-truck"></i>
     <p>$89.410</p>
-    <p>20% off</p>
+    <p class="discount">20% off</p>
     <b>Samsung Galaxy s10 Lorem ipsum, dolor sit amet.</b>
+    <p><i class="fas fa-credit-card footer-icon"></i></p>
     <b>Pagá con tarjeta o en efectivo</b>
     <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+    <p><i class="fas fa-gift footer-icon"></i></p>
     <b>Envío gratis desde $ 1.999</b>
     <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+    <p><i class="fas fa-user-shield footer-icon"></i></p>
     <b>Seguridad, de principio a fin</b>
     <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
     <p>Copyright © 1999-2019 MercadoLiebre S.R.L.</p>
