--- a/index.html
+++ b/index.html
@@ -28,35 +28,45 @@
     
     <img src="images/img-home-banner.jpg" width="100%" alt="banner-mercado-liebre">
     <h3 class="recomendation">Basado en tu última visita</h3>
-    <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera-mercado-liebre">
-    <i class="fas fa-truck"></i>
-    <p>$6.770</p>
-    <p class="discount">40% off</p>
-    <b>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</b>
-    <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="macbook-mercado-liebre">
-    <i class="fas fa-truck"></i>
-    <p>$230.000</p>
-    <p class="discount">20% off</p>
-    <b>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</b>
-    <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="tv-mercado-liebre">
-    <i class="fas fa-truck"></i>
-    <p>$70.500</p>
-    <p class="discount">10% off</p>
-    <b>Televisor Samsung Smart TV Lorem ipsum, dolor sit amet.</b>
-    <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="samsumg-cel-mercado-liebre">
-    <i class="fas fa-truck"></i>
-    <p>$89.410</p>
-    <p class="discount">20% off</p>
-    <b>Samsung Galaxy s10 Lorem ipsum, dolor sit amet.</b>
-    <p><i class="fas fa-credit-card footer-icon"></i></p>
-    <b>Pagá con tarjeta o en efectivo</b>
-    <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
-    <p><i class="fas fa-gift footer-icon"></i></p>
-    <b>Envío gratis desde $ 1.999</b>
-    <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
-    <p><i class="fas fa-user-shield footer-icon"></i></p>
-    <b>Seguridad, de principio a fin</b>
-    <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
-    <p>Copyright © 1999-2019 MercadoLiebre S.R.L.</p>
+    <div class="product">
+        <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera-mercado-liebre">
+        <i class="fas fa-truck"></i>
+        <p>$6.770</p>
+        <p class="discount">40% off</p>
+        <b>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</b>
+    </div>
+    <div class="product">
+        <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="macbook-mercado-liebre">
+        <i class="fas fa-truck"></i>
+        <p>$230.000</p>
+        <p class="discount">20% off</p>
+        <b>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</b>
+    </div>
+    <div class="product">
+        <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="tv-mercado-liebre">
+        <i class="fas fa-truck"></i>
+        <p>$70.500</p>
+        <p class="discount">10% off</p>
+        <b>Televisor Samsung Smart TV Lorem ipsum, dolor sit amet.</b>
+    </div>
+    <div class="product">
+        <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="samsumg-cel-mercado-liebre">
+        <i class="fas fa-truck"></i>
+        <p>$89.410</p>
+        <p class="discount">20% off</p>
+        <b>Samsung Galaxy s10 Lorem ipsum, dolor sit amet.</b>
+    </div>
+    <div class="footer">
+        <p><i class="fas fa-credit-card footer-icon"></i></p>
+        <b>Pagá con tarjeta o en efectivo</b>
+        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+        <p><i class="fas fa-gift footer-icon"></i></p>
+        <b>Envío gratis desde $ 1.999</b>
+        <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+        <p><i class="fas fa-user-shield footer-icon"></i></p>
+        <b>Seguridad, de principio a fin</b>
+        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
+        <p>Copyright © 1999-2019 MercadoLiebre S.R.L.</p>
+    </div>
 </body>
 </html>
