--- a/index.html
+++ b/index.html
@@ -56,6 +56,35 @@
         <p class="discount">20% off</p>
         <b>Samsung Galaxy s10 Lorem ipsum, dolor sit amet.</b>
     </div>
+    <h3 class="recomendation">Ofertas</h3>
+    <div class="product">
+        <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera-mercado-liebre">
+        <i class="fas fa-truck"></i>
+        <p>$6.770</p>
+        <p class="discount">40% off</p>
+        <b>Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</b>
+    </div>
+    <div class="product">
+        <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="macbook-mercado-liebre">
+        <i class="fas fa-truck"></i>
+        <p>$230.000</p>
+        <p class="discount">20% off</p>
+        <b>Macbook Pro 2019 Lorem ipsum, dolor sit amet.</b>
+    </div>
+    <div class="product">
+        <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="tv-mercado-liebre">
+        <i class="fas fa-truck"></i>
+        <p>$70.500</p>
+        <p class="discount">10% off</p>
+        <b>Televisor Samsung Smart TV Lorem ipsum, dolor sit amet.</b>
+    </div>
+    <div class="product">
+        <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="samsumg-cel-mercado-liebre">
+        <i class="fas fa-truck"></i>
+        <p>$89.410</p>
+        <p class="discount">20% off</p>
+        <b>Samsung Galaxy s10 Lorem ipsum, dolor sit amet.</b>
+    </div>
     <div class="footer">
         <p><i class="fas fa-credit-card footer-icon"></i></p>
         <b>Pagá con tarjeta o en efectivo</b>
