--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <li><a href="">Ayuda</a></li>
         </ul>
         <ul>
-            <li><a href="">Crea tu cuenta </a><i class="fas fa-address-card"></i></li>
-            <li><a href="">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
+            <li><a href="/register">Crea tu cuenta </a><i class="fas fa-address-card"></i></li>
+            <li><a href="/login">Ingresá </a><i class="fas fa-sign-in-alt"></i></li>
             <li><a href="">Mis compras </a><i class="fas fa-shopping-basket"></i></li>
         </ul>
     </div>
